tests/errors/syn_class2.java
public syn_class2  {

}
